Completando el ejercicio 4

--- a/index.html
+++ b/index.html
@@ -1,46 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Navbar</title>
-</head>
-<body>
-    
-
-
-<nav>
-    <picture>
-        <img src="/img/SoundwaveLogo.png" alt="imagen">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+    <title>AudioVibe</title>
+  </head>
+  <body>
+    <nav>
+      <picture>
+        <img src="/img/SoundwaveLogo.png" alt="imagen" />
         <h1>AudioVibe</h1>
-    </picture>
+      </picture>
 
-    <ul id="lista">
+      <ul id="lista">
         <a href="#">Explorar</a>
         <a href="#">Categorias</a>
         <a href="#">Populares</a>
         <a href="#">Nuevos</a>
-    </ul>
+      </ul>
 
-
-    <div id="botones">
+      <div id="botones">
         <button type="button" class="login-btn">Log In</button>
         <button type="button" class="freetrial-btn">Try for free</button>
-    </div>
-
+      </div>
     </nav>
 
+    <section id="hero">
+      <div id="presentacion">
+        <h1>Transforma tu Música con Nuestro Sonido Único.</h1>
+        <div class="barrita"></div>
+        <p>
+          En AudioVibe, nos apasiona la música y creemos en el poder que tiene
+          para inspirar, emocionar y transformar vidas. Nuestra misión es
+          proporcionar a músicos, productores y creadores de contenido de todo
+          el mundo los recursos que necesitan para llevar su arte al siguiente
+          nivel.
+        </p>
 
-<footer>
-    <p>Echo por Tomás Torres 👽 |Camada 4717|</p>
-</footer>
+        <a href="#about" class="btn">Conoce Más</a>
+      </div>
+      <img src="/img/undraw_listening_re_c2w0.svg" alt="" />
+    </section>
 
+    <section id="cards">
+      <div id="card">
+        <picture>
+          <img class="img-cards" src="/img/Pedalboardheader.png" alt="" />
+        </picture>
+        <h4>Pedal Boards Effects</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+          blanditiis molestiae laudantium consequatur suscipit assumenda!
+        </p>
+        <a class="btn-vermas" href="">Ver Mas</a>
+      </div>
+      <div id="card">
+        <picture>
+          <img class="img-cards" src="/img/Pedalboardheader.png" alt="" />
+        </picture>
+        <h4>Pedal Boards Effects</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+          blanditiis molestiae laudantium consequatur suscipit assumenda!
+        </p>
+        <a class="btn-vermas" href="">Ver Mas</a>
+      </div>
+      <div id="card">
+        <picture>
+          <img class="img-cards" src="/img/Pedalboardheader.png" alt="" />
+        </picture>
+        <h4>Pedal Boards Effects</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+          blanditiis molestiae laudantium consequatur suscipit assumenda!
+        </p>
+        <a class="btn-vermas" href="">Ver Mas</a>
+      </div>
+      <div id="card">
+        <picture>
+          <img class="img-cards" src="/img/Pedalboardheader.png" alt="" />
+        </picture>
+        <h4>Pedal Boards Effects</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+          blanditiis molestiae laudantium consequatur suscipit assumenda!
+        </p>
+        <a class="btn-vermas" href="">Ver Mas</a>
+      </div>
+    </section>
 
+    <section id="contacto">
+      <p id="workwus">work with us</p>
+      <p id="workwus2">work with us</p>
+      <picture>
+        <img
+          class="imagen"
+          src="/img/pikaso_texttoimage_35mm-film-photography-A-male-music-producer-with-s.jpeg"
+          alt=""
+        />
+      </picture>
+      <div id="form">
+        <h3>Contacto</h3>
 
+        <form action="#">
+          <div id="form-container">
+            <input type="text" name="" id="" placeholder="Nombre" />
+            <input type="text" placeholder="Numero" />
+            <input type="email" placeholder="Email" />
+            <button id="btn-submit" type="submit">Enviar</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <footer>
+      <div class="columnas">
+        <picture
+          ><img src="/img/SoundwaveLogoWhite.png" alt="" />
+          <h5>Audiovibe</h5>
+        </picture>
+        <input
+          type="email"
+          placeholder="Type your email to receive updates and newsletter"
+        />
+        <h6>Connect with us</h6>
 
+        <div id="logos">
+          <picture
+            ><img class="img-socialmedialogo" src="/img/facebook-f.svg" alt=""
+          /></picture>
+          <picture
+            ><img class="img-socialmedialogo" src="/img/x-twitter.svg" alt=""
+          /></picture>
+          <picture
+            ><img class="img-socialmedialogo" src="/img/instagram.svg" alt=""
+          /></picture>
+          <picture
+            ><img class="img-socialmedialogo" src="/img/linkedin-in.svg" alt=""
+          /></picture>
+        </div>
+      </div>
 
+      <div class="columnas">
+        <h6>The project</h6>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press Kit</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Iconothon</a></li>
+          <li><a href="#">Draft L.A</a></li>
+        </ul>
+      </div>
 
+      <div class="columnas">
+        <h6>Learn More</h6>
+        <ul>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Mac App</a></li>
+          <li><a href="#">Teams</a></li>
+          <li><a href="#">Creators</a></li>
+          <li><a href="#">API</a></li>
+        </ul>
+      </div>
 
-</body>
+      <div class="columnas">
+        <h6>Support</h6>
+        <ul>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Creators Handbook</a></li>
+          <li><a href="#">Terms of Use</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Creator Terms</a></li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
